src/snapshots/tests__tptp_input.snap
---
source: src/tests.rs
expression: parsed
---
Include(
    Included(
        "test",
    ),
    None,
)
