src/snapshots/tests__tptp_input_or_eof.snap
---
source: src/tests.rs
expression: parsed
---
Some(
    Include(
        Included(
            "test",
        ),
        None,
    ),
)
