src/snapshots/tests__useful_info.snap
---
source: src/tests.rs
expression: parsed
---
UsefulInfo(
    GeneralList(
        Some(
            GeneralTerms(
                [
                    Data(
                        Variable(
                            Variable(
                                UpperWord(
                                    "X",
                                ),
                            ),
                        ),
                    ),
                    Data(
                        Variable(
                            Variable(
                                UpperWord(
                                    "Y",
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
